реструктуризация в связи с началом реализации

--- a/description.html
+++ b/description.html
@@ -27,20 +27,23 @@
 </p>
 <ul><li>учителях
 </li><li>обучающихся (учебных группах, классах)
+</li><li>учебном плане
 </li><li>учебных курсах
 </li><li>достижениях (портфолио)
 </li></ul>
 <p>
 Поскольку в различных программных реализациях представление и, соответственно, кодификация данных различаются, в протоколе предусмотрена возможность указания данных синхронизации при взаимном переносе, где это возможно. Например, в РУЖЭЛЬ идентификатор курса физики для 5 класса &laquo;Ф25&raquo;, а в Moodle тот же курс идентифицируется &laquo;G5487&raquo;&nbsp;&mdash; оба идентификатора будут представлены в протоколе, что облегчит конверсию.
-</p><ul><li><p>
-Списки учителей и учеников в предлагаемом протоколе представлены в виде сочетания внутренних идентификаторов, ФИО, даты рождения. В сочетании с тегами синхронизации, если известны идентификаторы в другой системе, это упростит обмен данными. В противном случае, остается возможность поиска и ручной идентификации по ФИО.
-</p></li><li><p>
-Для описания учебных групп (классов) введен удобный ключ <i>absGrade</i>, который вычисляется по разнице начала учебного года и учебного потока. Например, если в сентябре 2005 года образовался 5б класс, то 
 </p><p>
+Списки учителей и учеников в предлагаемом протоколе представлены в виде сочетания внутренних идентификаторов. В сочетании с тегами синхронизации, если известны идентификаторы в другой системе, это упростит обмен данными.
+</p><p>
+ФИО и даты рождения учащихся и других участников учебного процесса вынесены в отдельную XML-структуру. Это позволяет передавать основной набор данных обезличенно, не опасаясь за сохранность персональных данных. При необходимости преобразования данных в читаемый формат, персональные данные могут быть переданы отдельно и подключены как справочник.
+</p><p>
+Для указания относительного возраста учащихся введен удобный ключ <i>absGrade</i>, который вычисляется по разнице начала учебного года и учебного потока. Например, если в сентябре 2005 года образовался 5б класс, то 
+</p><div style = "margin:1ex;">
 <strong>absGrade</strong>=2005-5=2006-6=2007-7=<strong>2000</strong>, 
+</div><p>
+т.е. он сохраняется до окончания школы для любого потока 5 классов 2005 года. Это позволяет легко идентифицировать, к какому потоку относится учащийся в любом учебном году.
 </p><p>
-т.е. он сохраняется до окончания школы для любого потока 5 классов 2005 года. Это позволяет легко идентифицировать учебную группу по году поступления/ окончания. Помимо возрастного параметра, учебная группа имеет свой идентификатор и собственное название.
-</p></li><li><p>
 Наиболее масштабным в данном протоколе является описание учебных курсов, т.к. они содержат всю информацию ЭЖ об учебном процессе. Каждый учебный курс имеет свой идентификатор.
 </p><p>
 Под учебным курсом в данном протоколе понимается эквивалент предметной страницы в классном журнале. Каждый курс задается тремя ключевыми параметрами:
@@ -69,8 +72,8 @@
 Для всех видов отметок предусмотрены свои описатели, но при этом все описания отметок выглядят <strong>единообразно</strong>. При отсутствии в системе каких-то разновидностей, предусмотренных в протоколе, они могут просто не использоваться при обмене. Более сложная система легко сможет интерпретировать более простое представление. Для импорта сложного оценивания в более простую систему необходимо технологическое решение ее разработчиков. Например, каждую сложную критериальную отметку можно представить в виде нескольких простых. Кроме того, в протокол заложена возможность указания <strong>одной интегральной</strong> отметки в дополнение к набору отметок по критериям.
 </p><p>
 Отдельной проблемой может быть разное <strong>шкалирование</strong> отметок. Традиционно в школе использовалась 5-бальная система. Сейчас могут встречаться иные схемы, а традиционная система все чаще подвергается критике. При различном шкалировании отметок может возникнуть проблема при обмене данными, поэтому было бы полезно иметь какую-то единую шкалу, как минимум, для задач обмена. Учитывая традицию набирающего силу ЕГЭ, стоит в качестве шкалы использовать 100 баллов&nbsp;&mdash; понятийным преимуществом такого оценивания может быть его интерпретация как процент успешности.
-</p></li><li><p>
+</p><p>
 В протоколе предусмотрен блок описания достижений обучающихся. В нем можно указать <strong>поощрения, грамоты и призы</strong>, которыми они были отмечены. В описании предусмотрена возможность указания Интернет-ссылки на описание мероприятия или опубликованного материала, отзыва.
-</p></li></ul>
+</p>
 </body>
 </html>
